# TenderBytes

./: .project  README.md  TenderBytes.cabal
.dist-buildwrapper/: TenderBytes.cabal
.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  .MakingLines.lhs.bwinfo  .MakingLines.lhs.bwusage  .PoemDictionaries.lhs.bwinfo  .PoemDictionaries.lhs.bwusage  .PoemDicts.lhs.bwinfo  .PoemDicts.lhs.bwusage  .PoemUnits.lhs.bwinfo  .PoemUnits.lhs.bwusage  .PoemWords.lhs.bwinfo  .PoemWords.lhs.bwusage  .Poems.lhs.bwinfo  .Poems.lhs.bwusage  .Syllables.lhs.bwinfo  .Syllables.lhs.bwusage  Main.hs  MakingLines.lhs  PoemDictionaries.lhs  PoemDicts.lhs  PoemUnits.lhs  PoemWords.lhs
src/: Main.hs  MakingLines.lhs  PoemDictionaries.lhs  PoemDicts.lhs  PoemUnits.lhs  PoemWords.lhs  Poems.lhs  Syllables.lhs
