name:           TenderBytes
version:        0.1
cabal-version:  >= 1.12
build-type:     Simple
author:         Kavi

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   random >=1.0 && <1.1
  ghc-options:     -Wall
  other-modules:   
                   Syllables,
                   PoemDicts,
                   Poems,
                   MakingLines,
                   PoemDictionaries
  extensions:      
                   FlexibleInstances, 
                   FunctionalDependencies

executable TenderBytes
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Syllables,
                   PoemDicts,
                   Poems,
                   MakingLines,
                   PoemDictionaries

